# rust_multi_platform_demo

./: .gitignore  Cargo.toml  README.md
examples/android_demo/: README.md  settings.gradle
examples/android_demo/app/: build.gradle
examples/android_demo/app/src/main/: AndroidManifest.xml
examples/android_demo/app/src/main/res/values/: themes.xml
examples/android_demo/gradle/: libs.versions.toml
examples/android_demo/gradle/wrapper/: gradle-wrapper.properties
examples/android_demo/mynativelib/: build.gradle
examples/android_demo/mynativelib/src/main/cpp/: CMakeLists.txt  NativeClient.cpp  NativeClient.h  jni_entry.cpp  mynativelib.cpp
examples/android_demo/scripts/: copy-rust.sh
examples/c_demo/: .gitignore  CMakeLists.txt  main.cpp
examples/rust_demo/: Cargo.toml
examples/rust_demo/src/: main.rs
my_lib/: Cargo.toml  build.rs  cbindgen.toml
my_lib/src/: engine.rs  lib.rs
my_lib/src/core/: engine.rs  engine_builder.rs  engine_builder_param.rs  engine_config.rs  engine_context.rs  engine_error.rs  mod.rs
my_lib/src/core/enums/: mod.rs  platform_type.rs
my_lib/src/core/models/: user_info.rs
my_lib/src/core/network/: http_client.rs  mod.rs  network.rs
my_lib/src/ffi/: ffi_callback_def.rs  ffi_context_ptr.rs  ffi_engine.rs  ffi_engine_builder_param.rs  ffi_helper.rs  mod.rs
my_lib/src/ffi/enums/: ffi_engine_error.rs  ffi_platform_type.rs  mod.rs
my_lib/src/ffi/models/: ffi_user_info.rs  mod.rs
my_lib/src/models/: user_info.rs
scripts/: build-all.sh  build-android.sh  build-ios.sh  build-linux.sh  build-mac.sh  build-ohos.sh  build-windows.sh  check-build.py
(+22 files in other folders)
