[package]
name = "my_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt", "sync", "time", "macros", "net", "rt-multi-thread", "fs"] } # popular runtime library for asynchronous programming.
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }

threadpool = "1.8.1"
lazy_static = "1.5.0"

# network
reqwest = { version = "0.11.27", default-features = false, features = ["multipart", "stream", "blocking", "rustls-tls"] }

[build-dependencies]
cbindgen = "0.28.0"
chrono = "0.4.38"


[lib]
crate-type = ["staticlib", "rlib"]